--- a/pom.xml
+++ b/pom.xml
@@ -64,20 +64,30 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
+  		<plugins>
+    			<plugin>
+      				<artifactId>maven-assembly-plugin</artifactId>
+      				<configuration>
+        				<archive>
+          					<manifest>
+            						<mainClass>fully.qualified.MainClass</mainClass>
+          					</manifest>
+        				</archive>
+        				<descriptorRefs>
+          					<descriptorRef>jar-with-dependencies</descriptorRef>
+        				</descriptorRefs>
+      				</configuration>
+      				<executions>
+        				<execution>
+          					<id>make-assembly</id> <!-- this is used for inheritance merges -->
+          					<phase>package</phase> <!-- bind to the packaging phase -->
+          					<goals>
+            						<goal>single</goal>
+          					</goals>
+        				</execution>
+      				</executions>
+    			</plugin>
+  		</plugins>
 	</build>
 
 </project>
